<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/thumbnail_of_media"
            app:srcCompat="@drawable/baseline_image_24" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_photo_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view" />

            <TextView
                android:id="@+id/txt_photo_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_view" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/ibtn_delete_item"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/baseline_clear_24"
            android:contentDescription="@string/remove_current_item"
            app:srcCompat="@drawable/baseline_clear_24"
            tools:srcCompat="@drawable/baseline_clear_24" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>